<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>piduino_test_01</name>
  <version>0.0.1</version>
  <description>piduino package pubsub test 01</description>
  <maintainer email="amhun@pdx.edu">lac</maintainer>
  <license>MIT</license>

  <!-- Core dependencies -->
  <depend>rclpy</depend>  <!-- Required for ROS 2 Python nodes -->
  <depend>std_msgs</depend>  <!-- Needed for String message type -->

  <!-- Build tool dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- Testing dependencies -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

